--- a/banquets.html
+++ b/banquets.html
@@ -88,7 +88,7 @@
 	</ul>
 </div>
 
-<header class="container-fluid header header-banquets" data-type="background" data-speed="10" data-section="one">
+<header class="container-fluid header header-banquets section" data-type="background" data-speed="10" data-section="one">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
@@ -104,7 +104,7 @@
 	</div>
 </header>
 
-<section class="container-fluid about-rest" id="about-rest" data-section="two">
+<section class="container-fluid about-rest section" id="about-rest" data-section="two" data-midnight="black">
 	<a href="#about-rest" class="button-arrow"></a>
 	<div class="row">
 		<div class="main-container">
@@ -152,7 +152,7 @@
 	</div>
 </section><!-- about rest -->
 
-<section class="container-fluid gallery" data-section="three">
+<section class="container-fluid gallery section" data-section="three" data-midnight="black">
 	<div class="main-container">
 		<h2 class="h2">Галлерея</h2>
 		<div class="gallery-wrapper clearfix">
@@ -200,7 +200,7 @@
 	</div>
 </section>
 
-<div class="reserv reserv-table">
+<div class="reserv reserv-table" data-midnight="black">
 	<header>резервация столика</header>
 	<div class="reserv-container">
 		<div class="reserv-block clearfix">
@@ -305,6 +305,12 @@
 	});
 
  });
+</script>
+<script src="js/midnight.jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+    $('#navigator').midnight();
+  });
 </script>
 <script src="js/script.js"></script>
 </body>
