--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
 </div>
 
 
-<header class="container-fluid header header-event" data-type="background" data-speed="10" data-section="one">
+<header class="container-fluid header header-event section" data-type="background" data-speed="10" data-section="one">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
@@ -104,7 +104,7 @@
 </header>
 
 
-<section class="container-fluid about-rest" id="about-rest" data-section="two">
+<section class="container-fluid about-rest section" id="about-rest" data-section="two" data-midnight="black">
 	<a href="#about-rest" class="button-arrow"></a>
 	<div class="row">
 		<div class="main-container">
@@ -130,7 +130,7 @@
 	</div>
 </section>
 
-<section class="container-fluid gallery gallery-event" data-section="three">
+<section class="container-fluid gallery gallery-event section" data-section="three" data-midnight="black">
 	<div class="main-container">
 		<h2 class="h2">Фотографии с мероприятия</h2>
 		<div class="gallery-wrapper clearfix">
@@ -236,6 +236,12 @@
 		});
 
     });
+</script>
+<script src="js/midnight.jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+    $('#navigator').midnight();
+  });
 </script>
 <script src="js/script.js"></script>
 </body>
