--- a/restoraunt.html
+++ b/restoraunt.html
@@ -88,7 +88,7 @@
 	</ul>
 </div>
 
-<header class="container-fluid header header-rest" data-type="background" data-speed="10" data-section="one">
+<header class="container-fluid header header-rest section" data-type="background" data-speed="10" data-section="one">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
@@ -106,7 +106,7 @@
 
 
 
-<section class="container-fluid about-rest" id="about-rest">
+<section class="container-fluid about-rest" id="about-rest" data-midnight="black">
 	<a href="#about-rest" class="button-arrow"></a>
 	<div class="row">
 		<div class="main-container">
@@ -128,7 +128,7 @@
 	</div>
 </section>
 
-<section class="container-fluid events" data-section="two">
+<section class="container-fluid events section" data-section="two" data-midnight="black">
 	<div class="row">
 		<div class="main-container clearfix">
 			<header>
@@ -195,7 +195,7 @@
 	</div>
 </section><!-- events -->
 
-<section class="container-fluid about-menu">
+<section class="container-fluid about-menu" data-midnight="black">
 	<div class="row">
 		<div class="main-container clearfix">
 			<div class="col-lg-3 col-sm-12 about-text">
@@ -265,7 +265,7 @@
 
 
 
-<section class="container-fluid about-menu about-zal">
+<section class="container-fluid about-menu about-zal" data-midnight="black">
 	<a href="#" class="button-arrow"></a>
 	<div class="row">
 		<div class="main-container clearfix">
@@ -295,7 +295,7 @@
 	</div>
 </section><!-- about menu -->
 
-<section class="container-fluid gallery" data-section="three">
+<section class="container-fluid gallery section" data-section="three" data-midnight="black">
 	<div class="main-container">
 		<h2 class="h2">Фотографии с мероприятия</h2>
 		<div class="gallery-wrapper clearfix">
@@ -343,7 +343,7 @@
 	</div>
 </section>
 
-<section class="container-fluid maps">
+<section class="container-fluid maps" data-midnight="black">
 	<div class="row">
 		<h2 class="h2">Как нас найти</h2>
 		<p class="small-title">наш адрес</p>
@@ -352,7 +352,7 @@
 </section>
 
 
-<div class="reserv reserv-table">
+<div class="reserv reserv-table" data-midnight="black">
 	<header>резервация столика</header>
 	<div class="reserv-container">
 		<div class="reserv-block clearfix">
@@ -456,6 +456,12 @@
 
     });
   </script>
+<script src="js/midnight.jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+    $('#navigator').midnight();
+  });
+</script>
 <script src="js/script.js"></script>
 </body>
 </html>
