--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Рестораны<span class="drop-arrow"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Пункт 1</a></li>
+            <li><a href="index.html">Пункт 1</a></li>
             <li><a href="#">Пункт 2</a></li>
             <li><a href="#">Пункт 3</a></li>
           </ul>
