--- a/events.html
+++ b/events.html
@@ -110,6 +110,9 @@
 		<div class="main-container">
 			<div class="event-item clearfix">
 				<div class="col-md-6 col-sm-12">
+					<img src="images/event-img.jpg" height="562" width="889" alt="">
+				</div>
+				<div class="col-md-6 col-sm-12">
 					<div class="event-table">
 						<div class="event-cell">
 							<div class="date">
@@ -122,8 +125,23 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="event-item clearfix">
 				<div class="col-md-6 col-sm-12">
 					<img src="images/event-img.jpg" height="562" width="889" alt="">
+				</div>
+				<div class="col-md-6 col-sm-12">
+					<div class="event-table">
+						<div class="event-cell">
+							<div class="date">
+								15/03/2015
+							</div>
+							<div class="text">
+								Весенние забавы в ресторанах ZAFFERANO VEGAS Крокус Сити и VEGAS Каширское шоссе, 8 марта состоялся мастер-класс "Мамин День" 
+								с программой делаем букеты для любимых мам, фото-отчет наших маленьких гостей.
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
