--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,7 @@
 				<div class="col-md-6 col-sm-12">
 					<div class="menu-block">
 						<div class="row">
-							<div class="name">Салат из бакинских помидоров с красным</div>
+							<div class="name">Салат из бакинских помидоров с красным Салат из бакинских помидоров с красным</div>
 							<div class="price">520 р.</div>
 						</div>
 					</div>
