--- a/restoraunt.html
+++ b/restoraunt.html
@@ -355,6 +355,7 @@
 <div class="reserv reserv-table" data-midnight="black">
 	<header>резервация столика</header>
 	<div class="reserv-container">
+		<form action="">
 		<div class="reserv-block clearfix">
 			<span class="reser-icon">
 				<img src="images/calendar.png" height="32" width="30" alt="">
@@ -391,8 +392,6 @@
 				<input type="hidden" id="select">
 			</div>
 		</div>
-
-		<form>
 			<input type="submit" value="заказать" class="send">
 		</form>
 	</div>
@@ -462,6 +461,7 @@
     $('#navigator').midnight();
   });
 </script>
+<script src="js/validation.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
