--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
 <script src="js/jquery.js"></script>
 <!--<script src="js/bootstrap.min.js"></script>-->
 <script src="js/bootstrap.js"></script>
+<script src="js/maskedinput.js"></script>
  <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
   <script type="text/javascript">
     $(document).ready(function() {
